[gd_scene load_steps=4 format=3 uid="uid://cei8vomvc8xge"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_hcwk3"]
[ext_resource type="Texture2D" uid="uid://beahankxdrmin" path="res://Sprite/UI/MenuBG.png" id="2_128c8"]
[ext_resource type="Texture2D" uid="uid://2j53qk7i7s" path="res://Texture/PlayerIcon.png" id="3_3lxuh"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hcwk3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(160, 90)
scale = Vector2(0.39801, 0.413793)
texture = ExtResource("2_128c8")

[node name="Sprite2D2" type="Sprite2D" parent="Panel"]
position = Vector2(157, 21.5)
scale = Vector2(1.5, 1.5625)
texture = ExtResource("3_3lxuh")

[node name="PlayButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 112.0
offset_top = 90.0
offset_right = 207.0
offset_bottom = 121.0
text = "PLAY"

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 112.0
offset_top = 129.0
offset_right = 207.0
offset_bottom = 160.0
text = "EXIT"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 165.0
offset_bottom = 42.0
text = "Kitchen Slayer"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/PlayButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
